@@ -20,6 +20,9 @@ Revision 0.1.10, released XX-XX-2017
 - Compat wrappers str2octs() and oct2strs() fixed to run over
   iso-8859-1 encoding.
 - Copyright notice added to non-trivial source code files.
+- Integer changed to emit Real instance if division produces a float.
+- True division operation now supported by Integer type.
+- Fix to divmod operation implementation in Integer type.
 - Fix to IntegerDecoder's precomputed value map on Python 3.
 - Fix to base ASN.1 types to run in "unicode_literals" mode.
 - Fix to composite constraints "+" operands ordering (AbstractConstraintSet.__radd__)
